# rust-wasm-vitejs-template

./: README.md
rust-program/: Cargo.toml
rust-program/src/: lib.rs
www-react/: package.json  pnpm-lock.yaml
www-react/src/: App.jsx
www-vanilla/: pnpm-lock.yaml
www-vanilla/src/: index.js
