[package]
name = "rust-program"
version = "0.1.0"
authors = ["yqianjiang <y.jiang.psy@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
sudoku="0.8.0"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# 参考 https://rustwasm.github.io/docs/book/reference/code-size.html#optimizing-builds-for-code-size
lto = true
opt-level = "z"
